--- a/birthday.html
+++ b/birthday.html
@@ -245,7 +245,7 @@ button {
 
 <!-- Gallery -->
 <div class="gallery">
-  <figure><img src="photo1.jpg" alt=""><figcaption>Our first beautiful memory ❤</figcaption></figure>
+  <figure><img src="photo1.jpg" alt=""><figcaption>Our beautiful memory ❤</figcaption></figure>
   <figure><img src="photo2.jpg" alt=""><figcaption>Moments that make me smile ✨</figcaption></figure>
   <figure><img src="photo3.jpg" alt=""><figcaption>Forever grateful for you 🌸</figcaption></figure>
 </div>
@@ -269,7 +269,9 @@ button {
 <div class="popup" id="popup">
   <div class="popup-content">
     <h2>🎈 Surprise 🎈</h2>
-    <p>May your life be filled with love and happiness 💕</p>
+    <p>May your life be filled with love and happiness 💕 
+      💐Wish you a Very Happy Birthday🎉and you are very precious to me. 
+      so ese hi sundar aur khush rhee tu bass.... 🥰😸💖♥💐💐</p>
     <button onclick="closePopup()">Close</button>
   </div>
 </div>
@@ -414,3 +416,4 @@ setInterval(()=>{
 
 </body>
 </html>
+
